[gd_scene load_steps=2 format=3 uid="uid://cpartyselect"]

[ext_resource type="Script" path="res://scripts/ui/party_select.gd" id="1_script"]

[node name="PartySelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.18, 1)

[node name="WalletPill" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 46.0
grow_horizontal = 0
theme_override_constants/separation = 6

[node name="CoinIcon" type="Label" parent="WalletPill"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ðŸ’°"

[node name="ZennyLabel" type="Label" parent="WalletPill"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "0"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 28
text = "Select Your Party"
horizontal_alignment = 1

[node name="PartyLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "ACTIVE PARTY (0/6)"
horizontal_alignment = 1

[node name="DockContainer" type="HBoxContainer" parent="CenterContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="UpgradeBtn" type="Button" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(180, 32)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
text = "+1 Slot (2000z)"

[node name="CollectionLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "YOUR COLLECTION"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(660, 280)
layout_mode = 2

[node name="CollectionGrid" type="GridContainer" parent="CenterContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 6

[node name="HBox" type="HBoxContainer" parent="CenterContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="BackBtn" type="Button" parent="CenterContainer/VBox/HBox"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "< Back"

[node name="ConfirmBtn" type="Button" parent="CenterContainer/VBox/HBox"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Start Game"

[connection signal="pressed" from="CenterContainer/VBox/UpgradeBtn" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="CenterContainer/VBox/HBox/BackBtn" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CenterContainer/VBox/HBox/ConfirmBtn" to="." method="_on_confirm_pressed"]
